5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1644_2445.log
== TEST (2019-04-04 21:38:03) 
-- CODE:
#Entradas

escala = input("Celsius (C) ou Fahrenheit (F)? ")
temp = float(input("Qual o valar da temperatura? "))

if(escala == C):
	m = 5/9
if(escala == F):
	m = 5/9(temp - 32)

print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(escala == C):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:38:45) 
-- CODE:
#Entradas

escala = input("Celsius (C) ou Fahrenheit (F)? ")
temp = float(input("Qual o valar da temperatura? "))

if(escala == "C"):
	m = 5/9
if(escala == "F"):
	m = 5/9(temp - 32)

print(m)
-- OUTPUT:
0.5555555555555556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:38:52) 
-- CODE:
#Entradas

escala = input("Celsius (C) ou Fahrenheit (F)? ")
temp = float(input("Qual o valar da temperatura? "))

if(escala == "C"):
	m = 5/9
if(escala == "F"):
	m = 5/9(temp - 32)

print(m)
-- OUTPUT:
0.5555555555555556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:39:27) 
-- CODE:
#Entradas

escala = input("Celsius (C) ou Fahrenheit (F)? ")
temp = float(input("Qual o valar da temperatura? "))

if(escala == "C"):
	m = 5/9
if(escala == "F"):
	m = 5/9(temp - 32)

print(m)
-- OUTPUT:
0.5555555555555556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:39:56) 
-- CODE:
#Entradas

escala = input("Celsius (C) ou Fahrenheit (F)? ")
temp = float(input("Qual o valar da temperatura? "))

if(escala == "C"):
	m = 5/9
if(escala == "F"):
	m = 5/9 * (temp - 32)

print(m)
-- OUTPUT:
0.5555555555555556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:41:30) 
-- CODE:
#Entradas

escala = input("Celsius (C) ou Fahrenheit (F)? ")
temp = float(input("Qual o valar da temperatura? "))

if(escala == "C"):
	m = 5/9 * (temp + 32)
if(escala == "F"):
	m = 5/9 * (temp - 32)

print(round(m,2))
-- OUTPUT:
195.56
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:41:54) 
-- CODE:
#Entradas

escala = input("Celsius (C) ou Fahrenheit (F)? ")
temp = float(input("Qual o valar da temperatura? "))

if(escala == "C"):
	m = 5/9 * temp + 32
if(escala == "F"):
	m = 5/9 * (temp - 32)

print(round(m,2))
-- OUTPUT:
209.78
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:42:48) 
-- CODE:
#Entradas

escala = input("Celsius (C) ou Fahrenheit (F)? ")
temp = float(input("Qual o valar da temperatura? "))

if(escala == "C"):
	m = (1.8 * temp) + 32
if(escala == "F"):
	m = 5/9 * (temp - 32)

print(round(m,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 21:43:04) 
-- CODE:
#Entradas

escala = input("Celsius (C) ou Fahrenheit (F)? ")
temp = float(input("Qual o valar da temperatura? "))

if(escala == "C"):
	m = (1.8 * temp) + 32
if(escala == "F"):
	m = 5/9 * (temp - 32)

print(round(m,2))
-- EXECUTION TIME:
0.206792
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
